<resources>

    <!-- Title Screen -->
    <string name="app_name">Tower Defense</string>
    <string name="menu_buttonPlay">Play</string>
    <string name="title">Awesome Tower Defense</string>
    <string name="start">Game Start</string>
    <!-- Param Screen -->
    <string name="menu_buttonParam">Parameters</string>
    <string name="menu_buttonQuit">Quit</string>
    <string name="param_music">Music On/Off</string>
    <string name="param_sound">Sound Effects On/Off</string>
    <string name="param_music_text">Music :</string>
    <string name="param_soundEffects_text">Sound Effects :</string>
    <!-- Game Screen -->
    <string name="give_up">Give Up</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="give_up_ask">Do you really want to give up?</string>
    <string name="menu_quit_ask">Are you sure you want to quit?</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="easy">easy</string>
    <string name="menu_buttonScore">Score</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pseudo">Pseudo :</string>
    <string name="pauseButton">Stop</string>
    <string name="buyButton">Buy</string>
</resources>